--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme.No231ActionBar">
-        <activity android:name=".Settings"></activity>
+        <activity android:name=".Settings" />
         <!-- <activity android:name=".events_list_fragment"></activity> -->
         <!-- <activity -->
         <!-- android:name=".account_fragment" -->
@@ -38,6 +38,7 @@
         <!-- </activity> -->
         <activity
             android:name=".LoginActivity"
+            android:exported="true"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
