--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -65,7 +65,7 @@
             android:screenOrientation="portrait"
             android:windowSoftInputMode="stateHidden|adjustPan" />
         <activity
-            android:name=".CreateEvent"
+            android:name=".CreateEventActivity"
             android:label="Create event"
             android:screenOrientation="portrait" />
     </application>
